v0.18.0/_sources/content/examples/index.rst.txt
:orphan:

Gallery
*******



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>

Mappings
========



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Parametric description of a block confined to a layer in a wholespace. The mapping can be appli...">

.. only:: html

  .. image:: /content/examples/01-maps/images/thumb/sphx_glr_plot_block_in_layer_thumb.png
    :alt: Maps: Parametric Block in a Layer

  :ref:`sphx_glr_content_examples_01-maps_plot_block_in_layer.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maps: Parametric Block in a Layer</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="We will use an example where we want a 1D layered earth as our model, but we want to map this t...">

.. only:: html

  .. image:: /content/examples/01-maps/images/thumb/sphx_glr_plot_combo_thumb.png
    :alt: Maps: ComboMaps

  :ref:`sphx_glr_content_examples_01-maps_plot_combo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maps: ComboMaps</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Build a model of a parametrized layer in a wholespace. If you want to build a model of a parame...">

.. only:: html

  .. image:: /content/examples/01-maps/images/thumb/sphx_glr_plot_layer_thumb.png
    :alt: Maps: Parametrized Layer

  :ref:`sphx_glr_content_examples_01-maps_plot_layer.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maps: Parametrized Layer</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This mapping allows you to go from one mesh to another.">

.. only:: html

  .. image:: /content/examples/01-maps/images/thumb/sphx_glr_plot_mesh2mesh_thumb.png
    :alt: Maps: Mesh2Mesh

  :ref:`sphx_glr_content_examples_01-maps_plot_mesh2mesh.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maps: Mesh2Mesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Invert synthetic magnetic data with variable background values and a single block anomaly burie...">

.. only:: html

  .. image:: /content/examples/01-maps/images/thumb/sphx_glr_plot_sumMap_thumb.png
    :alt: Maps: ComboMaps

  :ref:`sphx_glr_content_examples_01-maps_plot_sumMap.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maps: ComboMaps</div>
    </div>


.. raw:: html

    </div>

Gravity
=======



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Invert data in tiles.">

.. only:: html

  .. image:: /content/examples/02-gravity/images/thumb/sphx_glr_plot_inv_grav_tiled_thumb.png
    :alt: PF: Gravity: Tiled Inversion Linear

  :ref:`sphx_glr_content_examples_02-gravity_plot_inv_grav_tiled.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PF: Gravity: Tiled Inversion Linear</div>
    </div>


.. raw:: html

    </div>

Magnetics
=========



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Comparing the magnetics field in Vancouver to Seoul">

.. only:: html

  .. image:: /content/examples/03-magnetics/images/thumb/sphx_glr_plot_0_analytic_thumb.png
    :alt: PF: Magnetics: Analytics

  :ref:`sphx_glr_content_examples_03-magnetics_plot_0_analytic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PF: Magnetics: Analytics</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we demonstrate the use of a Magnetic Vector Inverison on 3D TreeMesh for the i...">

.. only:: html

  .. image:: /content/examples/03-magnetics/images/thumb/sphx_glr_plot_inv_mag_MVI_Sparse_TreeMesh_thumb.png
    :alt: Magnetic inversion on a TreeMesh

  :ref:`sphx_glr_content_examples_03-magnetics_plot_inv_mag_MVI_Sparse_TreeMesh.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Magnetic inversion on a TreeMesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we demonstrate the use of magnetic amplitude inversion on 3D TreeMesh for the ...">

.. only:: html

  .. image:: /content/examples/03-magnetics/images/thumb/sphx_glr_plot_inv_mag_nonLinear_Amplitude_thumb.png
    :alt: Magnetic Amplitude inversion on a TreeMesh

  :ref:`sphx_glr_content_examples_03-magnetics_plot_inv_mag_nonLinear_Amplitude.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Magnetic Amplitude inversion on a TreeMesh</div>
    </div>


.. raw:: html

    </div>

DC Resistivity and Induced Polarization
=======================================



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Comparison of the analytic and numerical solution for a direct current resistivity dipole in 3D...">

.. only:: html

  .. image:: /content/examples/04-dcip/images/thumb/sphx_glr_plot_dc_analytic_thumb.png
    :alt: DC Analytic Dipole

  :ref:`sphx_glr_content_examples_04-dcip_plot_dc_analytic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">DC Analytic Dipole</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is an example for 3D DC inversion. The model consists of 2 spheres, one conductive, the ot...">

.. only:: html

  .. image:: /content/examples/04-dcip/images/thumb/sphx_glr_plot_inv_dcip_dipoledipole_3Dinversion_twospheres_thumb.png
    :alt: 3D DC inversion of Dipole Dipole array

  :ref:`sphx_glr_content_examples_04-dcip_plot_inv_dcip_dipoledipole_3Dinversion_twospheres.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D DC inversion of Dipole Dipole array</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is an example for a parametric inversion with a DC survey. Resistivity structure of the su...">

.. only:: html

  .. image:: /content/examples/04-dcip/images/thumb/sphx_glr_plot_inv_dcip_dipoledipole_parametric_inversion_thumb.png
    :alt: Parametric DC inversion with Dipole Dipole array

  :ref:`sphx_glr_content_examples_04-dcip_plot_inv_dcip_dipoledipole_parametric_inversion.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Parametric DC inversion with Dipole Dipole array</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The DC.IO class is a convenient way to handle DC data and carry inversions within a same class....">

.. only:: html

  .. image:: /content/examples/04-dcip/images/thumb/sphx_glr_plot_read_DC_data_with_IO_class_thumb.png
    :alt: Reading and Plotting data with DC.IO class

  :ref:`sphx_glr_content_examples_04-dcip_plot_read_DC_data_with_IO_class.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Reading and Plotting data with DC.IO class</div>
    </div>


.. raw:: html

    </div>

Frequency Domain Electromagnetics
=================================



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here, the module *SimPEG.electromagnetics.analytics.FDEM* is used to simulate harmonic electric...">

.. only:: html

  .. image:: /content/examples/05-fdem/images/thumb/sphx_glr_plot_0_fdem_analytic_thumb.png
    :alt: Simulation with Analytic FDEM Solutions

  :ref:`sphx_glr_content_examples_05-fdem_plot_0_fdem_analytic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simulation with Analytic FDEM Solutions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we consider a single line of loop-loop EM data at 30kHz with 3 different coil ...">

.. only:: html

  .. image:: /content/examples/05-fdem/images/thumb/sphx_glr_plot_inv_fdem_loop_loop_2Dinversion_thumb.png
    :alt: 2D inversion of Loop-Loop EM Data

  :ref:`sphx_glr_content_examples_05-fdem_plot_inv_fdem_loop_loop_2Dinversion.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">2D inversion of Loop-Loop EM Data</div>
    </div>


.. raw:: html

    </div>

Time Domain Electromagnetics
============================



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here, the module *SimPEG.electromagnetics.analytics.TDEM* is used to simulate transient electri...">

.. only:: html

  .. image:: /content/examples/06-tdem/images/thumb/sphx_glr_plot_0_tdem_analytic_thumb.png
    :alt: Simulation with Analytic TDEM Solutions

  :ref:`sphx_glr_content_examples_06-tdem_plot_0_tdem_analytic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simulation with Analytic TDEM Solutions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Time-domain CSEM for a resistive cube in a deep marine setting">

.. only:: html

  .. image:: /content/examples/06-tdem/images/thumb/sphx_glr_plot_fwd_tdem_3d_model_thumb.png
    :alt: Time-domain CSEM for a resistive cube in a deep marine setting

  :ref:`sphx_glr_content_examples_06-tdem_plot_fwd_tdem_3d_model.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Time-domain CSEM for a resistive cube in a deep marine setting</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we demonstrate 2 approaches for simulating TDEM data when a permeable target i...">

.. only:: html

  .. image:: /content/examples/06-tdem/images/thumb/sphx_glr_plot_fwd_tdem_inductive_src_permeable_target_thumb.png
    :alt: EM: TDEM: Permeable Target, Inductive Source

  :ref:`sphx_glr_content_examples_06-tdem_plot_fwd_tdem_inductive_src_permeable_target.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EM: TDEM: Permeable Target, Inductive Source</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we plot the waveforms available in the TDEM module in addition to the StepOffW...">

.. only:: html

  .. image:: /content/examples/06-tdem/images/thumb/sphx_glr_plot_fwd_tdem_waveforms_thumb.png
    :alt: TDEM: Waveforms

  :ref:`sphx_glr_content_examples_06-tdem_plot_fwd_tdem_waveforms.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">TDEM: Waveforms</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we will create and run a TDEM 1D inversion.">

.. only:: html

  .. image:: /content/examples/06-tdem/images/thumb/sphx_glr_plot_inv_tdem_1D_thumb.png
    :alt: EM: TDEM: 1D: Inversion

  :ref:`sphx_glr_content_examples_06-tdem_plot_inv_tdem_1D.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EM: TDEM: 1D: Inversion</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we will create and run a TDEM 1D inversion, with VTEM waveform of which initial condition ...">

.. only:: html

  .. image:: /content/examples/06-tdem/images/thumb/sphx_glr_plot_inv_tdem_1D_raw_waveform_thumb.png
    :alt: EM: TDEM: 1D: Inversion with VTEM waveform

  :ref:`sphx_glr_content_examples_06-tdem_plot_inv_tdem_1D_raw_waveform.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EM: TDEM: 1D: Inversion with VTEM waveform</div>
    </div>


.. raw:: html

    </div>

Natural Source Electromagnetics
===============================



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Forward model 3D MT data.">

.. only:: html

  .. image:: /content/examples/07-nsem/images/thumb/sphx_glr_plot_fwd_nsem_MTTipper3D_thumb.png
    :alt: MT: 3D: Forward

  :ref:`sphx_glr_content_examples_07-nsem_plot_fwd_nsem_MTTipper3D.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MT: 3D: Forward</div>
    </div>


.. raw:: html

    </div>

Viscous Remanent Magnetization
==============================



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here, we predict the vertical db/dt response over a conductive and magnetically viscous Earth f...">

.. only:: html

  .. image:: /content/examples/08-vrm/images/thumb/sphx_glr_plot_fwd_vrm_thumb.png
    :alt: Predict Response from a Conductive and Magnetically Viscous Earth

  :ref:`sphx_glr_content_examples_08-vrm_plot_fwd_vrm.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Predict Response from a Conductive and Magnetically Viscous Earth</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here, we use an equivalent source inversion to remove the VRM response from TEM data collected ...">

.. only:: html

  .. image:: /content/examples/08-vrm/images/thumb/sphx_glr_plot_inv_vrm_eq_thumb.png
    :alt: Method of Equivalent Sources for Removing VRM Responses

  :ref:`sphx_glr_content_examples_08-vrm_plot_inv_vrm_eq.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Method of Equivalent Sources for Removing VRM Responses</div>
    </div>


.. raw:: html

    </div>

Richards Fluid Flow
===================



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The example shows simulation of Richards equation in 1D with a heterogeneous hydraulic conducti...">

.. only:: html

  .. image:: /content/examples/09-flow/images/thumb/sphx_glr_plot_fwd_flow_richards_1D_thumb.png
    :alt: FLOW: Richards: 1D: Forward Simulation

  :ref:`sphx_glr_content_examples_09-flow_plot_fwd_flow_richards_1D.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FLOW: Richards: 1D: Forward Simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The example shows an inversion of Richards equation in 1D with a heterogeneous hydraulic conduc...">

.. only:: html

  .. image:: /content/examples/09-flow/images/thumb/sphx_glr_plot_inv_flow_richards_1D_thumb.png
    :alt: FLOW: Richards: 1D: Inversion

  :ref:`sphx_glr_content_examples_09-flow_plot_inv_flow_richards_1D.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FLOW: Richards: 1D: Inversion</div>
    </div>


.. raw:: html

    </div>

PGI: Petrophysically and Geologically guided Inversion
======================================================



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="We do a comparison between the classic least-squares inversion and our formulation of a petroph...">

.. only:: html

  .. image:: /content/examples/10-pgi/images/thumb/sphx_glr_plot_inv_0_PGI_Linear_1D_thumb.png
    :alt: Petrophysically guided inversion (PGI): Linear example

  :ref:`sphx_glr_content_examples_10-pgi_plot_inv_0_PGI_Linear_1D.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Petrophysically guided inversion (PGI): Linear example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="We do a comparison between the classic least-squares inversion and our formulation of a petroph...">

.. only:: html

  .. image:: /content/examples/10-pgi/images/thumb/sphx_glr_plot_inv_1_PGI_Linear_1D_joint_WithRelationships_thumb.png
    :alt: Petrophysically guided inversion: Joint linear example with nonlinear relationships

  :ref:`sphx_glr_content_examples_10-pgi_plot_inv_1_PGI_Linear_1D_joint_WithRelationships.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Petrophysically guided inversion: Joint linear example with nonlinear relationships</div>
    </div>


.. raw:: html

    </div>

In Publication
==============



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, show 1D inversions of a single sounding from each of the RESOLVE and SkyTEM da...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_booky_1D_time_freq_inv_thumb.png
    :alt: Heagy et al., 2017 1D RESOLVE and SkyTEM Bookpurnong Inversions

  :ref:`sphx_glr_content_examples_20-published_plot_booky_1D_time_freq_inv.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Heagy et al., 2017 1D RESOLVE and SkyTEM Bookpurnong Inversions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, perform a stitched 1D inversion of the Bookpurnong RESOLVE data. The original ...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_booky_1Dstitched_resolve_inv_thumb.png
    :alt: Heagy et al., 2017 1D RESOLVE Bookpurnong Inversion

  :ref:`sphx_glr_content_examples_20-published_plot_booky_1Dstitched_resolve_inv.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Heagy et al., 2017 1D RESOLVE Bookpurnong Inversion</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example uses Self Consistent Effective Medium Theory to estimate the electrical conductivi...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_effective_medium_theory_thumb.png
    :alt: Effective Medium Theory Mapping

  :ref:`sphx_glr_content_examples_20-published_plot_effective_medium_theory.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Effective Medium Theory Mapping</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here, we use a primary-secondary approach to compute the sensitivity of an EM survey with respe...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_heagyetal2017_casing_thumb.png
    :alt: Heagy et al., 2017 Casing Example

  :ref:`sphx_glr_content_examples_20-published_plot_heagyetal2017_casing.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Heagy et al., 2017 Casing Example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here, we perform a 1D inversion using both the frequency and time domain codes. The forward sim...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_heagyetal2017_cyl_inversions_thumb.png
    :alt: Heagy et al., 2017 1D FDEM and TDEM inversions

  :ref:`sphx_glr_content_examples_20-published_plot_heagyetal2017_cyl_inversions.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Heagy et al., 2017 1D FDEM and TDEM inversions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook illustrates the SimPEG code used to invert Bouguer gravity data collected at Lagu...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_laguna_del_maule_inversion_thumb.png
    :alt: PF: Gravity: Laguna del Maule Bouguer Gravity

  :ref:`sphx_glr_content_examples_20-published_plot_laguna_del_maule_inversion.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PF: Gravity: Laguna del Maule Bouguer Gravity</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we load and plot the SkyTEM (2006) and RESOLVE (2008) Bookpurnong data, availa...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_load_booky_thumb.png
    :alt: Heagy et al., 2017 Load and Plot Bookpurnong Data

  :ref:`sphx_glr_content_examples_20-published_plot_load_booky.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Heagy et al., 2017 Load and Plot Bookpurnong Data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="There are two different forms of Richards equation that differ on how they deal with the non-li...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_richards_celia1990_thumb.png
    :alt: FLOW: Richards: 1D: Celia1990

  :ref:`sphx_glr_content_examples_20-published_plot_richards_celia1990.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FLOW: Richards: 1D: Celia1990</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we create and run a FDEM forward simulation to calculate the vertical current inside a ste...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_schenkel_morrison_casing_thumb.png
    :alt: EM: Schenkel and Morrison Casing Model

  :ref:`sphx_glr_content_examples_20-published_plot_schenkel_morrison_casing.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EM: Schenkel and Morrison Casing Model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Based on the SEG abstract Heagy, Cockett and Oldenburg, 2014.">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_tomo_joint_with_volume_thumb.png
    :alt: Straight Ray with Volume Data Misfit Term

  :ref:`sphx_glr_content_examples_20-published_plot_tomo_joint_with_volume.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Straight Ray with Volume Data Misfit Term</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Shows the water retention curve and the hydraulic conductivity function for a number of soil ty...">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_vadose_vangenuchten_thumb.png
    :alt: FLOW: Vadose: van Genuchten

  :ref:`sphx_glr_content_examples_20-published_plot_vadose_vangenuchten.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FLOW: Vadose: van Genuchten</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:

   /content/examples/01-maps/index.rst
   /content/examples/02-gravity/index.rst
   /content/examples/03-magnetics/index.rst
   /content/examples/04-dcip/index.rst
   /content/examples/05-fdem/index.rst
   /content/examples/06-tdem/index.rst
   /content/examples/07-nsem/index.rst
   /content/examples/08-vrm/index.rst
   /content/examples/09-flow/index.rst
   /content/examples/10-pgi/index.rst
   /content/examples/20-published/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: examples_python.zip </content/examples/examples_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: examples_jupyter.zip </content/examples/examples_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
