v0.22.2/_sources/content/examples/index.rst.txt
:orphan:

Gallery
*******



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>

Mappings
========



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Parametric description of a block confined to a layer in a wholespace. The mapping can be applied in 2D or 3D. Here we show a 2D example.">

.. only:: html

  .. image:: /content/examples/01-maps/images/thumb/sphx_glr_plot_block_in_layer_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_01-maps_plot_block_in_layer.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maps: Parametric Block in a Layer</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="We will use an example where we want a 1D layered earth as our model, but we want to map this to a 2D discretization to do our forward modeling. We will also assume that we are working in log conductivity still, so after the transformation we map to conductivity space. To do this we will introduce the vertical 1D map (simpeg.maps.SurjectVertical1D), which does the first part of what we just described. The second part will be done by the simpeg.maps.ExpMap described above.">

.. only:: html

  .. image:: /content/examples/01-maps/images/thumb/sphx_glr_plot_combo_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_01-maps_plot_combo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maps: ComboMaps</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Build a model of a parametrized layer in a wholespace. If you want to build a model of a parametrized layer in a halfspace, also use maps.InjectActiveCell.">

.. only:: html

  .. image:: /content/examples/01-maps/images/thumb/sphx_glr_plot_layer_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_01-maps_plot_layer.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maps: Parametrized Layer</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This mapping allows you to go from one mesh to another.">

.. only:: html

  .. image:: /content/examples/01-maps/images/thumb/sphx_glr_plot_mesh2mesh_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_01-maps_plot_mesh2mesh.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maps: Mesh2Mesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Invert synthetic magnetic data with variable background values and a single block anomaly buried at depth. We will use the Sum Map to invert for both the background values and an heterogeneous susceptibiilty model.">

.. only:: html

  .. image:: /content/examples/01-maps/images/thumb/sphx_glr_plot_sumMap_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_01-maps_plot_sumMap.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maps: ComboMaps</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Gravity
=======



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Invert data in tiles.">

.. only:: html

  .. image:: /content/examples/02-gravity/images/thumb/sphx_glr_plot_inv_grav_tiled_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_02-gravity_plot_inv_grav_tiled.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PF: Gravity: Tiled Inversion Linear</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Magnetics
=========



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Comparing the magnetics field in Vancouver to Seoul">

.. only:: html

  .. image:: /content/examples/03-magnetics/images/thumb/sphx_glr_plot_0_analytic_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_03-magnetics_plot_0_analytic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PF: Magnetics: Analytics</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we demonstrate the use of a Magnetic Vector Inverison on 3D TreeMesh for the inversion of magnetics affected by remanence. The mesh is auto-generated based on the position of the observation locations and topography.">

.. only:: html

  .. image:: /content/examples/03-magnetics/images/thumb/sphx_glr_plot_inv_mag_MVI_Sparse_TreeMesh_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_03-magnetics_plot_inv_mag_MVI_Sparse_TreeMesh.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Magnetic inversion on a TreeMesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we demonstrate the use of a Magnetic Vector Inverison on 3D TreeMesh for the inversion of magnetic data.">

.. only:: html

  .. image:: /content/examples/03-magnetics/images/thumb/sphx_glr_plot_inv_mag_MVI_VectorAmplitude_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_03-magnetics_plot_inv_mag_MVI_VectorAmplitude.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Magnetic inversion on a TreeMesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we demonstrate the use of magnetic amplitude inversion on 3D TreeMesh for the inversion of Total Magnetic Intensity (TMI) data affected by remanence. The original idea must be credited to Shearer and Li (2005) @ CSM">

.. only:: html

  .. image:: /content/examples/03-magnetics/images/thumb/sphx_glr_plot_inv_mag_nonLinear_Amplitude_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_03-magnetics_plot_inv_mag_nonLinear_Amplitude.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Magnetic Amplitude inversion on a TreeMesh</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

DC Resistivity and Induced Polarization
=======================================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Comparison of the analytic and numerical solution for a direct current resistivity dipole in 3D.">

.. only:: html

  .. image:: /content/examples/04-dcip/images/thumb/sphx_glr_plot_dc_analytic_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_04-dcip_plot_dc_analytic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">DC Analytic Dipole</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is an example for 3D DC inversion. The model consists of 2 spheres, one conductive, the other one resistive compared to the background.">

.. only:: html

  .. image:: /content/examples/04-dcip/images/thumb/sphx_glr_plot_inv_dcip_dipoledipole_3Dinversion_twospheres_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_04-dcip_plot_inv_dcip_dipoledipole_3Dinversion_twospheres.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D DC inversion of Dipole Dipole array</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is an example for a parametric inversion with a DC survey. Resistivity structure of the subsurface is parameterized as following parameters:">

.. only:: html

  .. image:: /content/examples/04-dcip/images/thumb/sphx_glr_plot_inv_dcip_dipoledipole_parametric_inversion_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_04-dcip_plot_inv_dcip_dipoledipole_parametric_inversion.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Parametric DC inversion with Dipole Dipole array</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The DC.IO class is a convenient way to handle DC data and carry inversions within a same class. It also has several plotting utils such as pseudosections. We show here an example of plotting DC data based on a demonstration dataset.">

.. only:: html

  .. image:: /content/examples/04-dcip/images/thumb/sphx_glr_plot_read_DC_data_with_IO_class_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_04-dcip_plot_read_DC_data_with_IO_class.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Reading and Plotting data with DC.IO class</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Frequency Domain Electromagnetics
=================================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here, the module simpeg.electromagnetics.analytics.FDEM is used to simulate harmonic electric and magnetic field for both electric and magnetic dipole sources in a wholespace.">

.. only:: html

  .. image:: /content/examples/05-fdem/images/thumb/sphx_glr_plot_0_fdem_analytic_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_05-fdem_plot_0_fdem_analytic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simulation with Analytic FDEM Solutions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we consider a single line of loop-loop EM data at 30kHz with 3 different coil separations [0.32m, 0.71m, 1.18m]. We will use only Horizontal co-planar orientations (vertical magnetic dipole), and look at the real and imaginary parts of the secondary magnetic field.">

.. only:: html

  .. image:: /content/examples/05-fdem/images/thumb/sphx_glr_plot_inv_fdem_loop_loop_2Dinversion_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_05-fdem_plot_inv_fdem_loop_loop_2Dinversion.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">2D inversion of Loop-Loop EM Data</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Time Domain Electromagnetics
============================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here, the module simpeg.electromagnetics.analytics.TDEM is used to simulate transient electric and magnetic field for both electric and magnetic dipole sources in a wholespace.">

.. only:: html

  .. image:: /content/examples/06-tdem/images/thumb/sphx_glr_plot_0_tdem_analytic_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_06-tdem_plot_0_tdem_analytic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simulation with Analytic TDEM Solutions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Time-domain CSEM for a resistive cube in a deep marine setting">

.. only:: html

  .. image:: /content/examples/06-tdem/images/thumb/sphx_glr_plot_fwd_tdem_3d_model_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_06-tdem_plot_fwd_tdem_3d_model.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Time-domain CSEM for a resistive cube in a deep marine setting</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we demonstrate 2 approaches for simulating TDEM data when a permeable target is present in the simulation domain. In the first, we use a step-on waveform (QuarterSineRampOnWaveform) and look at the magnetic flux at a late on-time. In the second, we solve the magnetostatic problem to compute the initial magnetic flux so that a step-off waveform may be used.">

.. only:: html

  .. image:: /content/examples/06-tdem/images/thumb/sphx_glr_plot_fwd_tdem_inductive_src_permeable_target_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_06-tdem_plot_fwd_tdem_inductive_src_permeable_target.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EM: TDEM: Permeable Target, Inductive Source</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we plot the waveforms available in the TDEM module in addition to the StepOffWaveform">

.. only:: html

  .. image:: /content/examples/06-tdem/images/thumb/sphx_glr_plot_fwd_tdem_waveforms_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_06-tdem_plot_fwd_tdem_waveforms.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">TDEM: Waveforms</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we will create and run a TDEM 1D inversion.">

.. only:: html

  .. image:: /content/examples/06-tdem/images/thumb/sphx_glr_plot_inv_tdem_1D_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_06-tdem_plot_inv_tdem_1D.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EM: TDEM: 1D: Inversion</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we will create and run a TDEM 1D inversion, with VTEM waveform of which initial condition is zero, but have some on- and off-time.">

.. only:: html

  .. image:: /content/examples/06-tdem/images/thumb/sphx_glr_plot_inv_tdem_1D_raw_waveform_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_06-tdem_plot_inv_tdem_1D_raw_waveform.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EM: TDEM: 1D: Inversion with VTEM waveform</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Natural Source Electromagnetics
===============================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Forward model 3D MT data.">

.. only:: html

  .. image:: /content/examples/07-nsem/images/thumb/sphx_glr_plot_fwd_nsem_MTTipper3D_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_07-nsem_plot_fwd_nsem_MTTipper3D.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MT: 3D: Forward</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Viscous Remanent Magnetization
==============================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here, we predict the vertical db/dt response over a conductive and magnetically viscous Earth for a small coincident loop system. Following the theory, the total response is approximately equal to the sum of the inductive and VRM responses modelled separately. The simpeg.VRM module is used to model the VRM response while an analytic solution for a conductive half-space is used to model the inductive response.">

.. only:: html

  .. image:: /content/examples/08-vrm/images/thumb/sphx_glr_plot_fwd_vrm_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_08-vrm_plot_fwd_vrm.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Predict Response from a Conductive and Magnetically Viscous Earth</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here, we use an equivalent source inversion to remove the VRM response from TEM data collected by a small coincident loop system. The data being inverted are the same as in the forward modeling example. To remove the VRM signal we:">

.. only:: html

  .. image:: /content/examples/08-vrm/images/thumb/sphx_glr_plot_inv_vrm_eq_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_08-vrm_plot_inv_vrm_eq.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Method of Equivalent Sources for Removing VRM Responses</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Richards Fluid Flow
===================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The example shows simulation of Richards equation in 1D with a heterogeneous hydraulic conductivity function.">

.. only:: html

  .. image:: /content/examples/09-flow/images/thumb/sphx_glr_plot_fwd_flow_richards_1D_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_09-flow_plot_fwd_flow_richards_1D.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FLOW: Richards: 1D: Forward Simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The example shows an inversion of Richards equation in 1D with a heterogeneous hydraulic conductivity function.">

.. only:: html

  .. image:: /content/examples/09-flow/images/thumb/sphx_glr_plot_inv_flow_richards_1D_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_09-flow_plot_inv_flow_richards_1D.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FLOW: Richards: 1D: Inversion</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

PGI: Petrophysically and Geologically guided Inversion
======================================================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="We do a comparison between the classic least-squares inversion and our formulation of a petrophysically constrained inversion. We explore it through the UBC linear example.">

.. only:: html

  .. image:: /content/examples/10-pgi/images/thumb/sphx_glr_plot_inv_0_PGI_Linear_1D_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_10-pgi_plot_inv_0_PGI_Linear_1D.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Petrophysically guided inversion (PGI): Linear example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="We do a comparison between the classic least-squares inversion and our formulation of a petrophysically guided inversion. We explore it through coupling two linear problems whose respective physical properties are linked by polynomial relationships that change between rock units.">

.. only:: html

  .. image:: /content/examples/10-pgi/images/thumb/sphx_glr_plot_inv_1_PGI_Linear_1D_joint_WithRelationships_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_10-pgi_plot_inv_1_PGI_Linear_1D_joint_WithRelationships.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Petrophysically guided inversion: Joint linear example with nonlinear relationships</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

In Publication
==============



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, show 1D inversions of a single sounding from each of the RESOLVE and SkyTEM data sets. The original data can be downloaded from: https://storage.googleapis.com/simpeg/bookpurnong/bookpurnong.tar.gz">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_booky_1D_time_freq_inv_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_20-published_plot_booky_1D_time_freq_inv.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Heagy et al., 2017 1D RESOLVE and SkyTEM Bookpurnong Inversions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, perform a stitched 1D inversion of the Bookpurnong RESOLVE data. The original data can be downloaded from: https://storage.googleapis.com/simpeg/bookpurnong/bookpurnong.tar.gz">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_booky_1Dstitched_resolve_inv_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_20-published_plot_booky_1Dstitched_resolve_inv.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Heagy et al., 2017 1D RESOLVE Bookpurnong Inversion</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example uses Self Consistent Effective Medium Theory to estimate the electrical conductivity of a mixture of two phases of materials. Given the electrical conductivity of each of the phases (\sigma_0, \sigma_1), the simpeg.maps.SelfConsistentEffectiveMedium map takes the concentration of phase-1 (\phi_1) and maps this to an electrical conductivity.">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_effective_medium_theory_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_20-published_plot_effective_medium_theory.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Effective Medium Theory Mapping</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here, we use a primary-secondary approach to compute the sensitivity of an EM survey with respect to a parametric model of a block in a layered space.">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_heagyetal2017_casing_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_20-published_plot_heagyetal2017_casing.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Heagy et al., 2017 Casing Example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here, we perform a 1D inversion using both the frequency and time domain codes. The forward simulations are conducted on a cylindrically symmetric mesh. The source is a point magnetic dipole source.">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_heagyetal2017_cyl_inversions_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_20-published_plot_heagyetal2017_cyl_inversions.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Heagy et al., 2017 1D FDEM and TDEM inversions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook illustrates the SimPEG code used to invert Bouguer gravity data collected at Laguna del Maule volcanic field, Chile. Refer to Miller et al 2016 EPSL for full details.">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_laguna_del_maule_inversion_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_20-published_plot_laguna_del_maule_inversion.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PF: Gravity: Laguna del Maule Bouguer Gravity</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we load and plot the SkyTEM (2006) and RESOLVE (2008) Bookpurnong data, available at https://storage.googleapis.com/simpeg/bookpurnong/bookpurnong.tar.gz">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_load_booky_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_20-published_plot_load_booky.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Heagy et al., 2017 Load and Plot Bookpurnong Data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="There are two different forms of Richards equation that differ on how they deal with the non-linearity in the time-stepping term.">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_richards_celia1990_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_20-published_plot_richards_celia1990.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FLOW: Richards: 1D: Celia1990</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we create and run a FDEM forward simulation to calculate the vertical current inside a steel-cased. The model is based on the Schenkel and Morrison Casing Model, and the results are used in a 2016 SEG abstract by Yang et al.">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_schenkel_morrison_casing_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_20-published_plot_schenkel_morrison_casing.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EM: Schenkel and Morrison Casing Model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Based on the SEG abstract Heagy, Cockett and Oldenburg, 2014.">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_tomo_joint_with_volume_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_20-published_plot_tomo_joint_with_volume.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Straight Ray with Volume Data Misfit Term</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Shows the water retention curve and the hydraulic conductivity function for a number of soil types.">

.. only:: html

  .. image:: /content/examples/20-published/images/thumb/sphx_glr_plot_vadose_vangenuchten_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_20-published_plot_vadose_vangenuchten.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FLOW: Vadose: van Genuchten</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /content/examples/01-maps/index.rst
   /content/examples/02-gravity/index.rst
   /content/examples/03-magnetics/index.rst
   /content/examples/04-dcip/index.rst
   /content/examples/05-fdem/index.rst
   /content/examples/06-tdem/index.rst
   /content/examples/07-nsem/index.rst
   /content/examples/08-vrm/index.rst
   /content/examples/09-flow/index.rst
   /content/examples/10-pgi/index.rst
   /content/examples/20-published/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: examples_python.zip </content/examples/examples_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: examples_jupyter.zip </content/examples/examples_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
